# limux

./: .gitignore  .gitmodules  .vercelignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release-daemon.yml
app/: Cargo.toml  build.rs
app/src/: app.rs  appearance.rs  browser.rs  clipboard.rs  dbus.rs  ghostty_sys.rs  input.rs  main.rs  notify.rs  session.rs  settings.rs  settings_ui.rs  sidebar.rs  socket.rs  split.rs  surface.rs  surfaces.rs  tab_strip.rs  tray.rs  util.rs  window.rs  workspace.rs
app/src/remote/: bootstrap.rs  config.rs  controller.rs  file_drop.rs  mod.rs  proxy_broker.rs  proxy_tunnel.rs  relay.rs  rpc.rs  shell.rs  ssh_detect.rs
cli/: Cargo.toml
cli/src/: discovery.rs  main.rs  output.rs  socket.rs
cli/src/commands/: browser.rs  metadata.rs  mod.rs  remote.rs  split.rs  terminal.rs  workspace.rs
daemon/remote/: README.md  go.mod
daemon/remote/cmd/limuxd-remote/: agent_launch.go  cli.go  cli_test.go  main.go  main_test.go  tmux_compat.go  tmux_compat_test.go  tmux_split_ref_test.go
docs/: ghostty-fork.md
scripts/: build_remote_daemon_release_assets.sh  run-tests-linux.sh
tests_v2/: cmux.py  limux.py  test_linux_mvp.py
