[package]
name = "limux"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
gdk4 = { version = "0.9", features = ["v4_6"] }
glib = "0.20"
gio = "0.20"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
ksni = "0.3"
base64 = "0.22"
tokio = { version = "1", features = ["rt", "sync", "time", "process", "net", "io-util"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }

[build-dependencies]
cc = "1"
